<resources>
    <string name="app_name">Music PlayerX</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Playlists</string>
    <string name="total_songs">Total Songs</string>
    <string name="music">Music</string>
    <string name="song_name">Song Name</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">loading..</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">Song Album</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="min_120">120 Minutes</string>
</resources>